--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,25 @@
  *= require_tree .
  *= require_self
  */
+
+
+h1 {
+ color: grey;
+ font-size: 50px;
+ font-family: Helvetica;
+ align-items: center;
+ display: flex;
+}
+
+li {
+  display: flex;
+  color:dimgrey;
+  font-size: 10px;
+  align-items: center;
+}
+
+form {
+  color:darkgray;
+  font-size: 20px;
+  border-radius: 8%;
+}
